...
          style={CONTINUE}
          textStyle={CONTINUE_TEXT}
          tx="mainMenuScreen.gallery"
          onPress={onGalleryPress}
        />
        <Button
          testID="ReportsButton"
          style={CONTINUE}
          textStyle={CONTINUE_TEXT}
          tx="mainMenuScreen.reports"
          onPress={() => navigation.navigate("reports")}
        />
      </Screen>
...
