...
          />
          <Text style={[CONTENT, LEGAL]} tx="welcomeScreen.attention" />
        </Screen>
        <SafeAreaView style={FOOTER}>
          <View style={FOOTER_CONTENT}>
            <Button
              testID="ContinueAnonymouslyButton"
              style={CONTINUE}
              textStyle={CONTINUE_TEXT}
              tx="welcomeScreen.continue"
              onPress={nextScreen}
            />
          </View>
...
