...
    "attention": "УВАГА!!!\n\nЗабороняється поширення інформації про направлення, переміщення зброї, озброєння та бойових припасів в Україну, рух, переміщення або розміщення Збройних Сил України чи інших утворених відповідно до законів України військових формувань",
    "continue": "ПРОДОВЖИТИ АНОНІМНО"
  },
  "mainMenuScreen": {
    "mainMenu": "ГОЛОВНЕ МЕНЮ",
    "camera": "КАМЕРА",
    "gallery": "ГАЛЕРЕЯ",
    "loadedFromGallery": "МЕДІАФАЙЛ ДОДАНО ДО ЗВІТУ",
    "reports": "МОЇ ЗВІТИ"
  },
  "cameraScreen": {
    "cameraPermissionRequired": "Для цієї функції потрібен доступ до камери",
    "microphonePermissionRequired": "Для цієї функції потрібен доступ до мікрофона",
...
